# Markpad

./: AGENTS.md  README.md  RELEASING.md  package-lock.json  package.json
.claude/skills/pr-notify/: SKILL.md
.claude/skills/pr-prepare/: SKILL.md
.claude/skills/pr-review/: SKILL.md
.claude/skills/pr-submit/: SKILL.md
.claude/skills/pullrequest-markpad/: SKILL.md
.githooks/: pre-commit
.github/workflows/: build.yml  claude.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/: MarkdownViewer.svelte
src/lib/components/: Editor.svelte  Settings.svelte  TitleBar.svelte  UpdateDialog.svelte
src/lib/stores/: update.svelte.ts
src/lib/utils/: i18n.ts  markdown.ts
