[package]
name = "Markpad"
version = "2.6.6"
description = "Simple Markdown viewer and text editor"
authors = ["you"]
edition = "2021"

[[bin]]
name = "Markpad"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "markpad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
comrak = "0.18"
serde_json = "1"
tauri-plugin-prevent-default = "2.0.0-rc.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
notify = "6"
regex = "1"

reqwest = "0.12"
zip = { version = "2.1", default-features = false, features = ["deflate", "time"] }
directories = "5"
opener = { version = "0.7", features = ["reveal"] }
chrono = "0.4"
env_logger = "0.11.8"
log = "0.4.29"
font-kit = "0.14"
base64 = "0.22"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }



[target.'cfg(windows)'.dependencies]
mslnk = "0.1"
winreg = "0.52"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols


